test/fail/type-parameter-count-varargs-too-many.grace
type {
  name(*params)
}.assert(object {
  method name(first, *rest) {}
})
